--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ categories = ["cryptography"]
 crate-type = ["lib"]
 
 [features]
-default = ["curv-kzen/rust-gmp-kzen"]
+# default = ["curv-kzen/rust-gmp-kzen"]
+default = ['num-bigint']
 #cclst = ["class_group"]
 
 [dependencies]
